# ACDbot

./: .gitignore  README.md  meeting_topic_mapping.json  package-lock.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: protocol-calls.md
.github/workflows/: issue-workflow.yml  protocol-calls.yml  transcript.yml  youtube-uploader.yml  zoom-transcript-poll.yml
ACDbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
modules/: calendar.py  cli.py  discourse.py  gcal.py  telegram.py  transcript.py  zoom.py
scripts/: get_refresh_token.py  handle_issue.py  poll_zoom_recordings.py  upload_zoom_recording.py
tests/: test_discourse.py  test_parser.py  test_zoom.py
