[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acdbot"
version = "0.1.0"
description = "ACD Bot to manage Zoom, Discourse, Telegram, etc."
authors = [
  { name="Nicolas Consigny", email="nicolas.consigny@ethereum.org" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "requests",
  "python-dateutil",
  "google-api-python-client",
  "google-auth",
  "click",  # or remove if using argparse
  "requests-oauthlib"  # Added for OAuth support
]
